[package]
name = "block-array-cow"
version = "0.1.3"
authors = ["Campbell Barton <ideasman42@gmail.com>"]
description = "In memory array de-duplication, useful for efficient storing of a history of data versions."
documentation = "https://docs.rs/block-array-cow"
homepage = "https://github.com/ideasman42/block-array-cow"
readme = "readme.rst"
license = "Apache-2.0"
categories = ["algorithms", "data-structures"]

[dependencies]
